force-app/main/default/objects/GAP_Service__c/GAP_Service__c.object-meta.xml
<CustomObject>
    <description>[P2] I-Fresh 매출채권 분석용</description>
    <label>GAP 기능</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>