force-app/main/default/objects/GAP_Service__c/fields/Data_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Data_Cnt__c</fullName>
    <label>데이터연결 갯수</label>
    <summaryForeignKey>GAP_Service_Data__c.Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>