force-app/main/default/objects/GAP_Service__c/fields/Program_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Program_Cnt__c</fullName>
    <label>프로그램 갯수</label>
    <summaryForeignKey>GAP_Program_Service__c.ASIS_Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>