force-app/main/default/objects/GAP_Service__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>소스</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>