force-app/main/default/objects/GAP_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Method__c</columns>
    <columns>Desc__c</columns>
    <columns>Program_Cnt__c</columns>
    <columns>Data_Cnt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>